Fix covered FAB issue when uniformly sizing cards

--- a/src/main/webapp/styles/place-suggestions.css
+++ b/src/main/webapp/styles/place-suggestions.css
@@ -2,3 +2,8 @@
   margin-bottom: 1vh;
   margin-top: 5vh;
 }
+
+.card-fab {
+  position: relative;
+  z-index: 1;
+}
